--- a/ML/final recogiser model.ipynb
+++ b/ML/final recogiser model.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "{0: 'kushagra', 1: 'priyanshu', 2: 'rahul', 3: 'vishal_gorai'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,16 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "roll_dict={'kushagra':'10111','priyanshu':'10377','rahul':'10229','vishal_gorai':'10385'}"
+    "roll_dict={'kushagra':'10377','priyanshu':'10284','rahul':'10385','vishal_gorai':'10229'}\n",
+    "subject='DISCRETE MATHS'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +155,7 @@
     "    if name not in att_dict:\n",
     "        att_dict[name]=1\n",
     "    ##time1=(int)((time.split(\":\")[1]).split(\".\")[0])\n",
-    "    writefile(att_dict)\n",
+    "    \n",
     "        \n",
     "    ##if time%60==0:\n",
     "        ##writefile(att_dict)\n",
@@ -165,12 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def writefile(att_dict):\n",
     "    f=open('attendance.txt','w+')\n",
+    "    f.write(\"DISCRETE MATHS\\n\")\n",
     "    for k,v in att_dict.items():\n",
     "        roll=roll_dict[k]\n",
     "        f.write(\"%s\\r\\n\"%roll)\n",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +210,7 @@
     "    \n",
     "    cv2.imshow('video',frame)\n",
     "    if cv2.waitKey(1) &0xFF==ord('q'):\n",
+    "        writefile(att_dict)\n",
     "        break\n",
     "        \n",
     "        \n",
